tests/sksl/errors/MatrixIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'half3x3'
error: 5: index 3 out of range for 'half3x3'
error: 6: index 4 out of range for 'half3x3'
error: 7: index 1000000000 out of range for 'half3x3'
error: 9: index -1 out of range for 'half3x3'
error: 13: index 3 out of range for 'half3x3'
error: 14: index 4 out of range for 'half3x3'
error: 15: index 1000000000 out of range for 'half3x3'
8 errors
